fix hobby page padding, image sizes, and text alignment

--- a/src/styles/mantine.css
+++ b/src/styles/mantine.css
@@ -58,6 +58,7 @@
   height: 100vh;
   display: flex;
   flex-direction: row;
+  background-Color: var(--mantine-color-blue-0)
 }
 .hobbies-main-half1
 {
@@ -65,4 +66,8 @@
   height:100%;
   width:50%;
   background-image:'url(https://via.placeholder.com/150)';
+}
+
+.m_e615b15f.mantine-Card-root.m_1b7284a3.mantine-Paper-root {
+  padding: 0; 
 }
